force-app/main/default/objects/Job_Description__c/Job_Description__c.object-meta.xml
<CustomObject>
    <label>Job Description</label>
    <nameField>
        <label>Job Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Job Description</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>