force-app/main/default/objects/Job_Description__c/fields/Interestedtojoinus__c.field-meta.xml
<CustomField>
    <fullName>Interestedtojoinus__c</fullName>
    <label>Interested to join us?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>