force-app/main/default/objects/Job_Description__c/fields/POSITION__c.field-meta.xml
<CustomField>
    <fullName>POSITION__c</fullName>
    <label>POSITION</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>