force-app/main/default/objects/Job_Description__c/fields/ROLE_DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>ROLE_DESCRIPTION__c</fullName>
    <label>ROLE DESCRIPTION</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>